Added html of calculator elements

--- a/index.html
+++ b/index.html
@@ -8,6 +8,36 @@
   <script src="script.js"></script>
 </head>
 <body>
-  
+  <div id="calculator-body">
+    <div id="calculator-screen">
+
+    </div>
+    <div id="numpad">
+      <div id="top-row">
+        <button id="btn-9"></button>
+        <button id="btn-8"></button>
+        <button id="btn-7"></button>
+        <button id="btn-/"></button>
+      </div>
+      <div id="second-top-row">
+        <button id="btn-6"></button>
+        <button id="btn-5"></button>
+        <button id="btn-4"></button>
+        <button id="btn-*"></button>
+      </div>
+      <div id="second-bottom-row">
+        <button id="btn-3"></button>
+        <button id="btn-2"></button>
+        <button id="btn-1"></button>
+        <button id="btn--"></button>
+      </div>
+      <div id="bottom-row">
+        <button id="btn-C"></button>
+        <button id="btn-0"></button>
+        <button id="btn-="></button>
+        <button id="btn-+"></button>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
