Created first version of calculator styling.

--- a/index.html
+++ b/index.html
@@ -4,38 +4,41 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Calculator</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <script src="script.js"></script>
 </head>
 <body>
   <div id="calculator-body">
-    <div id="calculator-screen">
+    <div id="screen">
 
     </div>
     <div id="numpad">
-      <div id="top-row">
-        <button id="btn-9"></button>
-        <button id="btn-8"></button>
-        <button id="btn-7"></button>
-        <button id="btn-/"></button>
+      <div id="top-row" class="rows">
+        <button id="btn-9">9</button>
+        <button id="btn-8">8</button>
+        <button id="btn-7">7</button>
+        <button id="btn-/">/</button>
       </div>
-      <div id="second-top-row">
-        <button id="btn-6"></button>
-        <button id="btn-5"></button>
-        <button id="btn-4"></button>
-        <button id="btn-*"></button>
+      <div id="second-top-row" class="rows">
+        <button id="btn-6">6</button>
+        <button id="btn-5">5</button>
+        <button id="btn-4">4</button>
+        <button id="btn-*">*</button>
       </div>
-      <div id="second-bottom-row">
-        <button id="btn-3"></button>
-        <button id="btn-2"></button>
-        <button id="btn-1"></button>
-        <button id="btn--"></button>
+      <div id="second-bottom-row" class="rows">
+        <button id="btn-3">3</button>
+        <button id="btn-2">2</button>
+        <button id="btn-1">1</button>
+        <button id="btn--">-</button>
       </div>
-      <div id="bottom-row">
-        <button id="btn-C"></button>
-        <button id="btn-0"></button>
-        <button id="btn-="></button>
-        <button id="btn-+"></button>
+      <div id="bottom-row" class="rows">
+        <button id="btn-C">C</button>
+        <button id="btn-0">0</button>
+        <button id="btn-=">=</button>
+        <button id="btn-+">+</button>
       </div>
     </div>
   </div>
