Added runCalculator(), made the buttons interactive. Calculator calcutaes after '='.

--- a/index.html
+++ b/index.html
@@ -8,37 +8,37 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <script src="script.js"></script>
+  <script src="script.js" defer></script>
 </head>
 <body>
   <div id="calculator-body">
     <div id="screen">
-
+      <p id="screen-text"></p>
     </div>
     <div id="numpad">
       <div id="top-row" class="rows">
-        <button id="btn-9">9</button>
-        <button id="btn-8">8</button>
-        <button id="btn-7">7</button>
-        <button id="btn-/">/</button>
+        <button id="btn-7" class="numpad-btn">7</button>
+        <button id="btn-8" class="numpad-btn">8</button>
+        <button id="btn-9" class="numpad-btn">9</button>
+        <button id="btn-/" class="numpad-btn">/</button>
       </div>
       <div id="second-top-row" class="rows">
-        <button id="btn-6">6</button>
-        <button id="btn-5">5</button>
-        <button id="btn-4">4</button>
-        <button id="btn-*">*</button>
+        <button id="btn-4" class="numpad-btn">4</button>
+        <button id="btn-5" class="numpad-btn">5</button>
+        <button id="btn-6" class="numpad-btn">6</button>
+        <button id="btn-*" class="numpad-btn">*</button>
       </div>
       <div id="second-bottom-row" class="rows">
-        <button id="btn-3">3</button>
-        <button id="btn-2">2</button>
-        <button id="btn-1">1</button>
-        <button id="btn--">-</button>
+        <button id="btn-1" class="numpad-btn">1</button>
+        <button id="btn-2" class="numpad-btn">2</button>
+        <button id="btn-3" class="numpad-btn">3</button>
+        <button id="btn--" class="numpad-btn">-</button>
       </div>
       <div id="bottom-row" class="rows">
-        <button id="btn-C">C</button>
-        <button id="btn-0">0</button>
-        <button id="btn-=">=</button>
-        <button id="btn-+">+</button>
+        <button id="btn-C" class="numpad-btn">C</button>
+        <button id="btn-0" class="numpad-btn">0</button>
+        <button id="btn-=" class="numpad-btn">=</button>
+        <button id="btn-+" class="numpad-btn">+</button>
       </div>
     </div>
   </div>
